--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </style>
 </head>
 <body>
-    <div class="tournament-title">Legacy PH In-House Competition</div>
+    <div class="tournament-title">2025 Legacy PH In-House Competition</div>
     
     <!-- Kids Division -->
     <div class="division">
