--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
         <!-- Male Purple Belt Featherweight & Rooster -->
         <div class="division">
             <div class="division-title">MALE PURPLE BELT - Featherweight &amp; Rooster+
-                <p>🥇Mickee</p>
+                <p>🥇Mickee from Pacita</p>
             </div>
             <div class="bracket-container single-match">
                 <div class="bracket-round championship-round">
