--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <!-- Female White & Orange Belt -->
         <div class="division">
             <div class="division-title">FEMALE WHITE &amp; ORANGE BELT - Light + Featherweight&nbsp;
-                <p>🥇 Sab from Studio</p>
+                <p>🥇 Sab from Sto. Tomas</p>
             </div>
             <div class="bracket-container">
                 <div class="bracket-round round-1">
@@ -634,7 +634,7 @@
         <!-- Mixed Blue Belt -->
         <div class="division">
             <div class="division-title">MIXED BLUE BELT - Featherweight &amp; Rooster
-                <p>🥇Jong from Calamba</p>
+                <p>🥇Jong from Sto Tomas</p>
             </div>
             <div class="bracket-container">
                 <div class="bracket-round round-1">
